// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aside.jsx 1`] = `
<DocumentFragment>
  <h4>
    侧边导航布局
  </h4>
  <div
    class="t-layout t-layout-has-sider"
  >
    <aside
      class="t-layout--sider"
      style="width: 232px; max-width: 232px; min-width: 232px; flex: 0 0 232px;"
    >
      <div
        class="t-default-menu"
        style="width: 100%; height: 100%; box-shadow: none;"
      >
        <div
          class="t-default-menu__inner"
        >
          <div
            class="t-menu__logo"
          >
            <span>
              LOGO
            </span>
          </div>
          <ul
            class="t-menu t-menu--scroll"
          >
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                侧边内容一
              </span>
            </li>
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                侧边内容二
              </span>
            </li>
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                侧边内容三
              </span>
            </li>
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                侧边内容四
              </span>
            </li>
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                侧边内容无
              </span>
            </li>
          </ul>
        </div>
      </div>
    </aside>
    <div
      class="t-layout"
    >
      <main
        class="t-layout--content"
      >
        <div>
          Content
        </div>
      </main>
      <footer
        class="t-layout--footer"
      >
        Copyright @ 2019-2020 Tencent. All Rights Reserved
      </footer>
    </div>
  </div>
</DocumentFragment>
`;

exports[`base.jsx 1`] = `
<DocumentFragment>
  <h4>
    顶部导航布局
  </h4>
  <div
    class="t-layout"
  >
    <header
      class="t-layout--header"
    >
      Header
    </header>
    <main
      class="t-layout--content"
    >
      <div>
        Content
      </div>
    </main>
    <footer
      class="t-layout--footer"
    >
      Copyright @ 2019-2020 Tencent. All Rights Reserved
    </footer>
  </div>
  <br />
  <h4>
    侧边导航布局
  </h4>
  <div
    class="t-layout t-layout-has-sider"
  >
    <aside
      class="t-layout--sider"
      style="width: 232px; max-width: 232px; min-width: 232px; flex: 0 0 232px;"
    >
      <div
        class="t-default-menu"
        style="width: 100%; height: 100%; box-shadow: none;"
      >
        <div
          class="t-default-menu__inner"
        >
          <div
            class="t-menu__logo"
          >
            <span>
              LOGO
            </span>
          </div>
          <ul
            class="t-menu t-menu--scroll"
          >
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                侧边内容一
              </span>
            </li>
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                侧边内容二
              </span>
            </li>
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                侧边内容三
              </span>
            </li>
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                侧边内容四
              </span>
            </li>
            <li
              class="t-menu__item t-is-active t-menu__item--plain"
            >
              <span
                class="t-menu__content"
              >
                侧边内容无
              </span>
            </li>
          </ul>
        </div>
      </div>
    </aside>
    <div
      class="t-layout"
    >
      <main
        class="t-layout--content"
      >
        <div>
          Content
        </div>
      </main>
      <footer
        class="t-layout--footer"
      >
        Copyright @ 2019-2020 Tencent. All Rights Reserved
      </footer>
    </div>
  </div>
  <br />
  <h4>
    组合导航布局
  </h4>
  <div
    class="t-layout"
  >
    <header
      class="t-layout--header"
    >
      Header
    </header>
    <div
      class="t-layout t-layout-has-sider"
    >
      <aside
        class="t-layout--sider"
        style="width: 232px; max-width: 232px; min-width: 232px; flex: 0 0 232px;"
      >
        <div
          class="t-default-menu"
          style="width: 100%; height: 100%; box-shadow: none;"
        >
          <div
            class="t-default-menu__inner"
          >
            <div
              class="t-menu__logo"
            >
              <span>
                LOGO
              </span>
            </div>
            <ul
              class="t-menu t-menu--scroll"
            >
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容一
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容二
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容三
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容四
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容无
                </span>
              </li>
            </ul>
          </div>
        </div>
      </aside>
      <div
        class="t-layout"
      >
        <main
          class="t-layout--content"
        >
          <div>
            Content
          </div>
        </main>
        <footer
          class="t-layout--footer"
        >
          Copyright @ 2019-2020 Tencent. All Rights Reserved
        </footer>
      </div>
    </div>
  </div>
  <br />
  <div
    class="t-layout"
  >
    <header
      class="t-layout--header"
    >
      Header
    </header>
    <div
      class="t-layout t-layout-has-sider"
    >
      <div
        class="t-layout"
      >
        <main
          class="t-layout--content"
        >
          <div>
            Content
          </div>
        </main>
        <footer
          class="t-layout--footer"
        >
          Copyright @ 2019-2020 Tencent. All Rights Reserved
        </footer>
      </div>
      <aside
        class="t-layout--sider"
        style="width: 232px; max-width: 232px; min-width: 232px; flex: 0 0 232px;"
      >
        <div
          class="t-default-menu"
          style="width: 100%; height: 100%; box-shadow: none;"
        >
          <div
            class="t-default-menu__inner"
          >
            <div
              class="t-menu__logo"
            >
              <span>
                LOGO
              </span>
            </div>
            <ul
              class="t-menu t-menu--scroll"
            >
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容一
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容二
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容三
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容四
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容无
                </span>
              </li>
            </ul>
          </div>
        </div>
      </aside>
    </div>
  </div>
  <br />
  <div
    class="t-layout"
  >
    <header
      class="t-layout--header"
    >
      Header
    </header>
    <div
      class="t-layout t-layout-has-sider"
    >
      <aside
        class="t-layout--sider"
        style="width: 80px; max-width: 80px; min-width: 80px; flex: 0 0 80px;"
      >
        <div
          class="t-default-menu t-is-collapsed"
          style="width: 100%; height: 100%; box-shadow: none;"
        >
          <div
            class="t-default-menu__inner"
          >
            <div
              class="t-menu__logo"
            >
              <span>
                LOGO
              </span>
            </div>
            <ul
              class="t-menu"
            >
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容一
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容二
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容三
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容四
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容无
                </span>
              </li>
            </ul>
          </div>
        </div>
      </aside>
      <div
        class="t-layout"
      >
        <main
          class="t-layout--content"
        >
          <div>
            Content
          </div>
        </main>
        <footer
          class="t-layout--footer"
        >
          Copyright @ 2019-2020 Tencent. All Rights Reserved
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`combine.jsx 1`] = `
<DocumentFragment>
  <h4>
    组合导航布局
  </h4>
  <div
    class="t-layout"
  >
    <header
      class="t-layout--header"
    >
      Header
    </header>
    <div
      class="t-layout t-layout-has-sider"
    >
      <aside
        class="t-layout--sider"
        style="width: 232px; max-width: 232px; min-width: 232px; flex: 0 0 232px;"
      >
        <div
          class="t-default-menu"
          style="width: 100%; height: 100%; box-shadow: none;"
        >
          <div
            class="t-default-menu__inner"
          >
            <div
              class="t-menu__logo"
            >
              <span>
                LOGO
              </span>
            </div>
            <ul
              class="t-menu t-menu--scroll"
            >
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容一
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容二
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容三
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容四
                </span>
              </li>
              <li
                class="t-menu__item t-is-active t-menu__item--plain"
              >
                <span
                  class="t-menu__content"
                >
                  侧边内容无
                </span>
              </li>
            </ul>
          </div>
        </div>
      </aside>
      <div
        class="t-layout"
      >
        <main
          class="t-layout--content"
        >
          <div>
            Content
          </div>
        </main>
        <footer
          class="t-layout--footer"
        >
          Copyright @ 2019-2020 Tencent. All Rights Reserved
        </footer>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`top.jsx 1`] = `
<DocumentFragment>
  <h4>
    顶部导航布局
  </h4>
  <div
    class="t-layout"
  >
    <header
      class="t-layout--header"
    >
      Header
    </header>
    <main
      class="t-layout--content"
    >
      <div>
        Content
      </div>
    </main>
    <footer
      class="t-layout--footer"
    >
      Copyright @ 2019-2020 Tencent. All Rights Reserved
    </footer>
  </div>
</DocumentFragment>
`;
